--- a/literature.bib
+++ b/literature.bib
@@ -81,6 +81,16 @@
   publisher={Prentice hall Upper Saddle River}
 }
 
+@article{krishnamurthy1984improved,
+  title={{An Improved Min-Cut Algorithm for Partitioning VLSI Networks}},
+  author={Krishnamurthy, Balakrishnan},
+  journal={IEEE Transactions on Computers},
+  number={5},
+  pages={438--446},
+  year={1984},
+  publisher={IEEE}
+}
+
 @incollection{HuMoerder85,
   author      = {Hu, T. C. and Moerder, K.},
   title       = {{Multiterminal Flows in a Hypergraph}},
