--- a/master_thesis/master_thesis.tex
+++ b/master_thesis/master_thesis.tex
@@ -336,7 +336,7 @@ I could continue every morning with the same energy and passion as the day befor
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Optimized Approach on Modeling Flows in Hypergraphs}
+\section{Sparsifying Flow Networks of Hypergraphs}
 \label{sec:opt_flow_network}
 \input{sections/model_flow}
 
@@ -344,7 +344,7 @@ I could continue every morning with the same energy and passion as the day befor
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Using Max-Flow-Min-Cut Computations as Refinement Strategy}
+\section{Max-Flow-Min-Cut Refinement Framework}
 \label{sec:flow_refinement}
 
 \input{sections/flow_refinement}
