--- a/master_thesis/sections/appendix.tex
+++ b/master_thesis/sections/appendix.tex
@@ -153,7 +153,7 @@ Hypergraph                                                                      
 \end{table}
 
 \newpage
-\section{Detailed Speed Up Heuristic Evaluation}
+\section{Detailed Speedup Heuristic Evaluation}
 \begin{figure}[h!]
 \centering
 \input{experiments/speed_up_heuristics/subset.tex} %
