--- a/master_thesis/sections/experiments.tex
+++ b/master_thesis/sections/experiments.tex
@@ -152,7 +152,7 @@ $\ExpHybrid$ in the following experiments.
 \label{tbl:flow_algo_network_summary}
 \end{table}
 
-\subsection{Configuration of the $k$-way Flow-Based Refinement}
+\subsection{Setup of the direct $k$-way Flow-Based Refinement}
 \label{sec:flow_configuration}
 
 In this Section, we examine the quality of our $k$-way flow-based refinement algorithm with
