--- a/master_thesis/sections/model_flow.tex
+++ b/master_thesis/sections/model_flow.tex
@@ -101,8 +101,8 @@ we need a preparing lemma in the correctness proof.
 \begin{figure}
 \centering
 \includegraphics[width=0.8\textwidth]{../img/network_transformation/heuer_transformation.eps}
-\caption{Transformation of a hypergraph into an equivalent flow network by removing
-         all hypernodes. Note, capacity of the black edges in the flow network is $\infty$.}
+\caption{Transformation of a hypergraph $H$ into an equivalent flow network \ShortExT{H}{V} by removing
+         all hypernodes of \ShortT{L}. Note, capacity of the black edges in the flow network is $\infty$.}
 \label{img:heuer_network}
 \end{figure}
 
@@ -409,7 +409,7 @@ and edges more than a hypernode removal. \\
 \begin{figure}[ht!]
 \centering
 \includegraphics[width=0.95\textwidth]{../img/network_transformation/hybrid_transformation.eps}
-\caption{Illustration of all presented transformations of a hypergraph into a flow network.}
+\caption{Illustration of all presented sparsifying techniques of the flow network of a hypergraph.}
 \label{img:transformation_chain}
 \end{figure}
 The minimum-weight $(S,T)$-cutset of $H$ can be calculated with the same technique described in Section
