--- a/master_thesis/sections/preliminaries.tex
+++ b/master_thesis/sections/preliminaries.tex
@@ -40,9 +40,9 @@ each \emph{strongly connected component}. All concepts are illustrated in
 \begin{figure}[ht!]
 \centering
 \includegraphics[width=0.9\textwidth]{../img/preliminaries/scctoposort.eps}
-\caption{Example of \emph{strongly connected components} of a directed graph and
-         a \emph{topological order} on a \emph{directed acyclic graph}. Each 
-         \emph{SCC} is marked in the same color.} 
+\caption{Example of \emph{Strongly Connected Components} in a directed graph and
+         a \emph{Topological Order} of a \emph{Directed Acyclic Graph}. Each 
+         \emph{SCC} is marked with the same color.} 
 \label{img:scctoposort}
 \end{figure}
 
@@ -85,11 +85,10 @@ with $r_f(u,v) > 0$. More formal $E_f = \{(u,v) \in V \times V\ |\ r_f(u,v) > 0\
 \begin{figure}
 \centering
 \includegraphics[width=0.9\textwidth]{../img/maximum_flow/maximum_flow_example.eps}
-\caption{Figure illustrates concepts related to the maximum flow problem. A valid flow $f$ 
-(red values) from $s$ to $t$ on a graph $G$ is shown on the left side. The corresponding
+\caption{Illustrates concepts related to the maximum flow problem. A flow function $f$ 
+(red values) from $s$ to $t$ of a graph $G$ is shown on the left side. The corresponding
 \emph{residual graph} $G_f$ with its \emph{residual capacities} (black values) 
-is illustrated on the right side. The red highlighted path represents an \emph{augmenting path}
-in $G$.}
+is illustrated on the right side. The red highlighted path is an \emph{augmenting path}.}
 \label{img:maximum_flow_example}
 \end{figure}
 The \emph{Max-Flow-Min-Cut}-Theorem is fundamental for many applications related to the maximum
@@ -163,8 +162,8 @@ $c(s,s') = c(t',t) = \infty$.
 \begin{figure}
 \centering
 \includegraphics[width=0.9\textwidth]{../img/maximum_flow/vertex_seperator_example.eps}
-\caption{ Illustration of the vertex separator problem and the transformation $T_V(G)$ in which
-          we can find a minimum vertex separator with maximum flow computation. }
+\caption{ Illustration of the vertex separator problem and the flow network $T_V(G)$ in which
+          we can find a minimum vertex separator. }
 \label{img:vertex_seperator_example}
 \end{figure}
 
