--- a/master_thesis/sections/related_work.tex
+++ b/master_thesis/sections/related_work.tex
@@ -35,7 +35,7 @@ is presented in \autoref{img:edmond_karp_example}.
 \begin{figure}
 \centering
 \includegraphics[width=0.9\textwidth]{../img/maximum_flow/edmond_karp_example.eps}
-\caption{Sample execution of Edmond \& Karps maximum flow algorithm \cite{edmonds1972theoretical}.
+\caption{Execution of Edmond \& Karps maximum flow algorithm \cite{edmonds1972theoretical}.
          The network $G$ with its capacities $c$ (black values) and flow $f$ (red values) is illustrated
          on the left side. The residual graph $G_f$ with its \emph{residual capacities} $r_f$ (black values)
          is presented on the right side. In each step the current \emph{augmenting path} in $G_f$ is highlighted
@@ -189,7 +189,7 @@ equal to the old cut of $G$. All concepts are illustrated in \autoref{img:balanc
 \begin{figure}
 \centering
 \includegraphics[width=0.6\textwidth]{../img/flow_local_search/balanced_bipartitioning.eps}
-\caption{Illustration of setting up a flow problem around the cut of graph $G$ \cite{andersen2008algorithm}.}
+\caption{Configuration of a flow problem around the cut of graph $G$ \cite{andersen2008algorithm}.}
 \label{img:balanced_bipartition}
 \end{figure}
 
@@ -232,9 +232,9 @@ a topological order exists.
 \begin{figure}
 \centering
 \includegraphics[width=0.9\textwidth]{../img/flow_local_search/closed_node_set.eps}
-\caption{Nodes $C = \{s,a,b,c\}$ illustrates a \emph{closed node set} in a graph $G$ (left side).
+\caption{$C = \{s,a,b,c\}$ is a \emph{closed node set} of graph $G$ (left side).
          After contracting all \emph{Strongly Connected Components}, we can enumerate all
-         \emph{closed node sets} of $G$ by sweeping in reverse topological order to the
+         \emph{closed node sets} of $G$ by sweeping in reverse topological order over the
          contracted graph (right side).}
 \label{img:closed_node_set}
 \end{figure}
